# libXosd

./: README.md
resources/: Engineering_Status_Report1.docx  Engineering_Status_Report2.docx  Software Design Document.docx  Software_Design_Specification_Template.doc  Software_Project_Information_File_Template.docx  Technical_Specification_01.docx  libXosd Project Design Document.pptx  libXosd Project Plan.docx
xosd/: Makefile  config.status  configure  configure.ac  libtool  libtool-disable-static  xosd.spec
xosd/macros/: Makefile
xosd/man/: Makefile  Makefile.am  Makefile.in  display_info.1  display_info.3  osd_split.1  osd_split.3  screen_count.1  screen_count.3  xosd.3  xosd_clone.1  xosd_clone.3  xosd_destroy.3  xosd_monitor.1  xosd_monitor.3  xosd_set_shadow_direction.3
xosd/pixmaps/: Makefile
xosd/script/: Makefile
xosd/src/: Makefile  Makefile.am  Makefile.in  display_info.c  osd_cat  osd_cat.c  osd_cat2  testprog  testprog.c  xosd.c  xosd.h  xosd.h.gch
xosd/src/.deps/: osd_cat.Po  testprog.Po
xosd/src/.libs/: lt-osd_cat  lt-testprog  osd_cat  testprog
xosd/src/bmp_plugin/: Makefile
xosd/src/libxosd/: Makefile  intern.h  testprog.c  xosd.c
xosd/src/libxosd/.deps/: xosd.Plo
xosd/src/libxosd/.libs/: libxosd.so.2.2.14
xosd/src/xmms_plugin/: Makefile  xmms_osd.c
