
man_MANS = osd_cat.1 xosd-config.1 xosd_monitor.1 xosd_clone.1 display_info.1 osd_split.1 screen_count.1  \
  xosd_display.3 xosd_hide.3 xosd_is_onscreen.3 xosd_set_vertical_offset.3 \
  xosd_set_pos.3 xosd_set_shadow_offset.3 xosd_set_shadow_direction.3 xosd_show.3 xosd_uninit.3 xosd.3 \
  xosd_get_number_lines.3 xosd_set_align.3 xosd_create.3 \
  xosd_set_horizontal_offset.3 xosd_destroy.3 xosd_create.3 xosd_is_onscreen.3 \
  xosd_set_bar_length.3 \
  

EXTRA_DIST = ${man_MANS}
